force-app/main/default/objects/AcctPlanForeignTrans__c/AcctPlanForeignTrans__c.object-meta.xml
<CustomObject>
    <label>Account Plan Foreign Trans</label>
    <nameField>
        <displayFormat>FT-{000000}</displayFormat>
        <label>Account Plan Foreign Trans Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plan Foreign Trans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>