force-app/main/default/objects/AcctPlanForeignTrans__c/fields/AmtPerYear__c.field-meta.xml
<CustomField>
    <fullName>AmtPerYear__c</fullName>
    <description>Amount per year (Baht)</description>
    <inlineHelpText>Amount per year (Baht)</inlineHelpText>
    <label>Amount per year (THB)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>