force-app/main/default/objects/AcctPlanForeignTrans__c/fields/ExchangeRateOfTHB__c.field-meta.xml
<CustomField>
    <fullName>ExchangeRateOfTHB__c</fullName>
    <description>Exchange rate of THB/ 1 FCY</description>
    <inlineHelpText>Exchange rate of THB/ 1 FCY</inlineHelpText>
    <label>Exchange rate of THB/ 1 FCY</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>