force-app/main/default/objects/AcctPlanForeignTrans__c/fields/FXMarginStg__c.field-meta.xml
<CustomField>
    <fullName>FXMarginStg__c</fullName>
    <description>FX margin (THB)</description>
    <inlineHelpText>FX margin (THB)</inlineHelpText>
    <label>FX margin (THB)</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>