force-app/main/default/objects/AcctPlanForeignTrans__c/fields/HedgingRatio__c.field-meta.xml
<CustomField>
    <fullName>HedgingRatio__c</fullName>
    <description>Hedging ratio (%) : Actual or to be</description>
    <inlineHelpText>Hedging ratio (%) : Actual or to be</inlineHelpText>
    <label>Hedging ratio (%) : Actual or to be</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>