force-app/main/default/objects/AcctPlanForeignTrans__c/fields/WalletFXFeePerYear__c.field-meta.xml
<CustomField>
    <fullName>WalletFXFeePerYear__c</fullName>
    <description>Wallet FX fee per year</description>
    <formula>PropsectHedgedAmount__c  * (FXMarginStg__c / if(isnull(ExchangeRateOfTHB__c),1,ExchangeRateOfTHB__c)
 )</formula>
    <inlineHelpText>Wallet FX fee per year</inlineHelpText>
    <label>WalletFXFeePerYear</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>